# codecrafters-http-server-rust

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs  parser.rs  request.rs  response.rs  routes.rs
src/bytes/: message.rs  mod.rs  protocol.rs  response.rs
src/model/: error.rs  header.rs  message.rs  mod.rs  request.rs  serialize.rs
src/parser/: base.rs  message.rs  mod.rs  protocol.rs  request.rs  response.rs  util.rs
src/request/: mod.rs
src/request/routes/: echo.rs  files.rs  mod.rs  root.rs  user_agent.rs
src/spec/: message.rs  mod.rs  protocol.rs  request.rs  response.rs
src/winnow_parser/: base.rs  message.rs  mod.rs  protocol.rs  request.rs  util.rs
