[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
itertools = "0.14.0"
thiserror = "1.0.38"                             # error handling
winnow = "0.7.6"
